--- a/gar1.ipynb
+++ b/gar1.ipynb
@@ -10403,6 +10403,27 @@
     "\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.74 ms ± 399 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import timeit\n",
+    "\n",
+    "x = np.arange(int(1e6))\n",
+    "%timeit np.sqrt(x)"
+   ]
   }
  ],
  "metadata": {
